--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
       <!-- Normal dependencies. -->
 
       <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.4.197</version>
+        <type>jar</type>
+      </dependency>
+      
+      <dependency>
         <groupId>javax.persistence</groupId>
         <artifactId>javax.persistence-api</artifactId>
         <version>2.2</version>
@@ -134,6 +141,13 @@
     
     <!-- Test-scoped dependencies. -->
 
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
