Added in Hibernate support
Signed-off-by: Laird Nelson <ljnelson@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
       </dependency>
 
       <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>5.3.4.Final</version>
+        <type>jar</type>
+      </dependency>
+      
+      <dependency>
         <groupId>org.jboss</groupId>
         <artifactId>jboss-transaction-spi</artifactId>
         <version>7.6.0.Final</version>
@@ -198,6 +205,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
 
     <!-- Provided-scoped dependencies. -->
 
