--- a/pom.xml
+++ b/pom.xml
@@ -98,46 +98,32 @@
         <version>5.3.4.Final</version>
         <type>jar</type>
       </dependency>
-      
-      <dependency>
-        <groupId>org.jboss</groupId>
-        <artifactId>jboss-transaction-spi</artifactId>
-        <version>7.6.0.Final</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jboss.narayana.jta</groupId>
-        <artifactId>cdi</artifactId>
-        <version>5.9.0.Final</version>
-        <type>jar</type>
-      </dependency>
-      
-      <dependency>
-        <groupId>org.jboss.narayana.jta</groupId>
-        <artifactId>narayana-jta</artifactId>
-        <version>5.9.0.Final</version>
-        <type>jar</type>
-      </dependency>
 
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-datasource-cdi-hikaricp</artifactId>
-        <version>0.0.2</version>
+        <version>0.1.0</version>
         <type>jar</type>
       </dependency>
       
       <dependency>
         <groupId>org.microbean</groupId>
-        <artifactId>microbean-development-annotations</artifactId>
-        <version>0.1.3</version>
+        <artifactId>microbean-jndi</artifactId>
+        <version>0.0.1</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>org.microbean</groupId>
-        <artifactId>microbean-jndi</artifactId>
-        <version>0.0.1</version>
+        <artifactId>microbean-narayana-jta-cdi</artifactId>
+        <version>0.0.2</version>
+        <type>jar</type>
+      </dependency>
+
+      <dependency>
+        <groupId>org.microbean</groupId>
+        <artifactId>microbean-narayana-jta-weld-se</artifactId>
+        <version>0.0.4</version>
         <type>jar</type>
       </dependency>
       
@@ -164,13 +150,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.jboss.weld.module</groupId>
-      <artifactId>weld-jta</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>org.microbean</groupId>
       <artifactId>microbean-weld-se-environment</artifactId>
       <type>pom</type>
@@ -183,21 +162,28 @@
       <type>jar</type>
       <scope>test</scope>
     </dependency>
-    
-    <dependency>
-      <groupId>org.jboss</groupId>
-      <artifactId>jboss-transaction-spi</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.jboss.narayana.jta</groupId>
-      <artifactId>narayana-jta</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
 
+    <dependency>
+      <groupId>org.jboss.weld.module</groupId>
+      <artifactId>weld-jta</artifactId>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.microbean</groupId>
+      <artifactId>microbean-narayana-jta-weld-se</artifactId>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.microbean</groupId>
+      <artifactId>microbean-narayana-jta-cdi</artifactId>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
       <artifactId>org.eclipse.persistence.jpa</artifactId>
@@ -211,6 +197,7 @@
       <type>jar</type>
       <scope>test</scope>
     </dependency>
+
 
     <!-- Provided-scoped dependencies. -->
 
@@ -243,13 +230,6 @@
     <dependency>
       <groupId>org.jboss.weld</groupId>
       <artifactId>weld-spi</artifactId>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.microbean</groupId>
-      <artifactId>microbean-development-annotations</artifactId>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -363,6 +343,7 @@
 
     <!-- maven-javadoc-plugin properties; see https://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html -->
     <doctitle>&lt;a href="${project.url}" target="_parent"&gt;&lt;span style="font-family:Lobster, cursive;"&gt;µb&lt;/span&gt; ${project.artifactId}&lt;/a&gt; ${project.version} &lt;a href="https://travis-ci.org/microbean/${project.artifactId}" target="_parent"&gt;&lt;img src="https://travis-ci.org/microbean/${project.artifactId}.svg?branch=master"&gt;&lt;/a&gt;</doctitle>
+    <excludePackageNames>org.microbean.jpa.jaxb</excludePackageNames>
     <links>https://microbean.github.io/microbean-development-annotations/apidocs/</links>
     <stylesheetfile>css/stylesheet.css</stylesheetfile>
 
