Fixing SpotBugs errors
Signed-off-by: Laird Nelson <ljnelson@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -321,6 +321,14 @@
     <plugins>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>javadoc-no-fork</report>
+              <report>test-javadoc-no-fork</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
       <plugin>
         <groupId>org.owasp</groupId>
