--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.microbean</groupId>
   <artifactId>microbean-jpa-weld-se</artifactId>
-  <version>0.1.4-SNAPSHOT</version>
+  <version>0.2.0-SNAPSHOT</version>
 
   <parent>
     <groupId>org.microbean</groupId>
@@ -14,7 +14,7 @@
   </parent>
 
   <name>microBean JPA (Weld SE)</name>
-  <description>Tools for using JPA in Weld SE.</description>
+  <description>Tools for using JPA in Weld SE applications.</description>
   <inceptionYear>2018</inceptionYear>
   <url>https://microbean.github.io/${project.artifactId}</url>
 
@@ -80,13 +80,6 @@
       </dependency>
 
       <dependency>
-        <groupId>javax.transaction</groupId>
-        <artifactId>javax.transaction-api</artifactId>
-        <version>1.2</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
         <groupId>org.eclipse.persistence</groupId>
         <artifactId>org.eclipse.persistence.jpa</artifactId>
         <version>2.7.3</version>
@@ -104,6 +97,13 @@
         <groupId>org.microbean</groupId>
         <artifactId>microbean-datasource-cdi-hikaricp</artifactId>
         <version>0.1.2</version>
+        <type>jar</type>
+      </dependency>
+
+      <dependency>
+        <groupId>org.microbean</groupId>
+        <artifactId>microbean-jpa-cdi</artifactId>
+        <version>0.1.4</version>
         <type>jar</type>
       </dependency>
 
@@ -178,6 +178,17 @@
       <scope>test</scope>
     </dependency>
 
+    
+    <!-- Runtime-scoped dependencies. -->
+
+    
+    <dependency>
+      <groupId>org.microbean</groupId>
+      <artifactId>microbean-jpa-cdi</artifactId>
+      <type>jar</type>
+      <scope>runtime</scope>
+    </dependency>
+
 
     <!-- Provided-scoped dependencies. -->
 
@@ -189,13 +200,6 @@
       <scope>provided</scope>
     </dependency>
 
-    <dependency>
-      <groupId>javax.transaction</groupId>
-      <artifactId>javax.transaction-api</artifactId>
-      <type>jar</type>
-      <scope>provided</scope>
-    </dependency>
-    
     <dependency>
       <groupId>org.microbean</groupId>
       <artifactId>microbean-base-specification</artifactId>
@@ -240,25 +244,6 @@
       <plugins>
 
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>jaxb2-maven-plugin</artifactId>
-          <version>2.4</version>
-          <executions>
-            <execution>
-              <id>xjc</id>
-              <goals>
-                <goal>xjc</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <clearOutputDir>false</clearOutputDir>
-            <extension>true</extension>
-            <packageName>org.microbean.jpa.jaxb</packageName>
-          </configuration>
-        </plugin>
-        
-        <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <configuration>
             <additionalJOptions combine.children="append">
@@ -282,11 +267,6 @@
     </pluginManagement>
     
     <plugins>
-
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jaxb2-maven-plugin</artifactId>
-      </plugin>
 
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
