--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
       </dependency>
 
       <dependency>
+        <groupId>javax.transaction</groupId>
+        <artifactId>javax.transaction-api</artifactId>
+        <version>1.2</version>
+        <type>jar</type>
+      </dependency>
+      
+      <dependency>
         <groupId>org.eclipse.persistence</groupId>
         <artifactId>org.eclipse.persistence.jpa</artifactId>
         <version>2.7.3</version>
@@ -117,7 +124,7 @@
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-narayana-jta-cdi</artifactId>
-        <version>0.1.5</version>
+        <version>0.1.6</version>
         <type>jar</type>
       </dependency>
 
@@ -217,6 +224,13 @@
     <dependency>
       <groupId>javax.persistence</groupId>
       <artifactId>javax.persistence-api</artifactId>
+      <type>jar</type>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>javax.transaction-api</artifactId>
       <type>jar</type>
       <scope>provided</scope>
     </dependency>
